@@ -1,3 +1,7 @@
+2007-05-07  Piotr Fusik  <fox@scene.pl>
+* asap.c, asap_internal.h, apokeysnd.c: handle TYPE D and TYPE S SAP files
+
+
 ** 0.3.0 released on 2007-05-06
 
 2007-05-06  Piotr Fusik  <fox@scene.pl>
